# ConsignmentTetris

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  SFB__test__SFB.mat  main_solveKinematics.m  main_workspace.mat  states.slx  test.cpp  test.tlc  test_wrapper.cpp
Simscape-Multibody-Contact-Forces-Library-20.2.5.0/CFL_Core/: README_contact_forces_core.txt
control_grt_rtw/: build_exception.mat
main_codegen_kinematics/: main_asm_delegate.c  main_asserts.c  main_kinematics.c  main_kinematics.h  main_setParameters.c  main_variableViewerValues.c  pm_printf.c
main_grt_rtw/: build_exception.mat
models/: control.slx  control.slx.original  data_processor_stub.slx  main.slx  main.slx.original  optimiser_test_model.slx  planning.slx  states.slx
resources/project/4GAiiefWY6A5YZacbSfiQTNDbk0/: OwMq9OBHqkmKgjLmLUxqef0PQZop.xml
scripts/: setup_library.m
spinfo/: rule_for_main.mat
src/: CMakeLists.txt  ConvStates.m  cam_data_bus.mat  control.slx  cuboid_visualiser.m  fk_solver.m  ik_solver.m  main.m  mesh.m  plotcube.m  process_optimiser.cc  process_optimiser.h  process_optimiser_pseudo_code.md  tetromino.m
tests/: .gitignore  CMakeLists.txt  ExampleTest.m  Makefile  OptimiserTests.m  exampleTests.m  generate_mer_test_cases.py  main.cpp  main_test  process_optimiser.test.cc  process_optimiser_box_tetromino.test.cc  process_optimiser_find_all_maximum_empty_cuboids.test.cc  process_optimiser_find_all_maximum_empty_rectangles.test.cc  process_optimiser_main_driver.test.cc  runTests.m  tetrominoTests.m
(+147 files in other folders)
